# coin-cbc

./: .gitignore  configure.ac
BuildTools/: coin.m4  prepare_new_release  run_autotools
COPKG/: .buildinfo
Cbc/: Makefile.am  configure.ac
Cbc/MSVisualStudio/v10/: Cbc.sln
Cbc/MSVisualStudio/v10alt/: Cbc.sln  Cbc.vcxproj  OsiCbcUnitTest.vcxproj  cbc.props  cbcsolver.props  libCbc.vcxproj  libCbcSolver.vcxproj  libOsiCbc.vcxproj  osicbc.props
Cbc/MSVisualStudio/v7/: Cbc.sln
Cbc/MSVisualStudio/v8/: Cbc.sln
Cbc/MSVisualStudio/v9/: Cbc.sln
Cbc/MSVisualStudio/v9alt/: Cbc.sln  Cbc.vcproj  OsiCbcUnitTest.vcproj  cbc.vsprops  cbcsolver.vsprops  libCbc.vcproj  libCbcSolver.vcproj  libOsiCbc.vcproj  osicbc.vsprops
Cbc/src/: CbcHeuristic.cpp  CbcModel.cpp  CbcModel.hpp  CbcNode.cpp  Cbc_ampl.cpp  Makefile.am  config_cbc_default.h
Cbc/test/: Makefile.am
Cgl/: Makefile.am  configure.ac
Cgl/MSVisualStudio/v10alt/: Cgl.sln  CglUnitTest.vcxproj  cgl.props  cglbase.props  genDefForCgl.ps1  (+18 more)
Cgl/src/: Makefile.am
Cgl/test/: Makefile.am
Clp/: Makefile.am  configure.ac
Clp/src/: ClpModel.cpp  ClpPresolve.cpp  ClpSolve.cpp  config_clp_default.h
Clp/test/: Makefile.am
CoinUtils/: Makefile.am  configure.ac
CoinUtils/src/: CoinParam.hpp  CoinParamUtils.cpp  CoinPresolveSingleton.cpp  CoinSmartPtr.hpp
Data/Sample/: Makefile.am  Makefile.in  configure  configure.ac
Osi/: Makefile.am  configure.ac
Osi/test/: Makefile.am  OsiSpxSolverInterfaceTest.cpp
include/coin/: CbcConfig.h  CglConfig.h  ClpConfig.h  CoinIndexedVector.hpp  CoinUtilsConfig.h  OsiConfig.h
(+188 files in other folders)
